update: fix word-spacing at textarea

--- a/src/index.css
+++ b/src/index.css
@@ -60,5 +60,5 @@ textarea:-ms-input-placeholder {
 
 textarea {
   letter-spacing: -0.03em;
-  word-spacing: -0.3em;
+  word-spacing: -0.25em;
 }
